# chained_comparisons

./: CMakeLists.txt  README.md
include/: chained_comparisons.h
test/: test.cpp
